--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/console": "^10.0|^11.0",
-        "illuminate/container": "^10.0|^11.0",
-        "illuminate/contracts": "^10.0|^11.0",
-        "illuminate/database": "^10.0|^11.0",
-        "illuminate/queue": "^10.0|^11.0",
-        "illuminate/support": "^10.0|^11.0",
-        "symfony/console": "^6.0|^7.0",
-        "symfony/finder": "^6.0|^7.0"
+        "illuminate/console": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/container": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/contracts": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/database": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/queue": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
+        "symfony/console": "^5.0|^6.0|^7.0",
+        "symfony/finder": "^5.0|^6.0|^7.0"
     },
     "require-dev": {
         "laravel/octane": "^1.4|^2.0",
